fix(card): image stretching on IE
* Fixes the card images stretching too much in IE11.
* Fixes icons not being aligned in the colors demo.

Fixes #8629.

--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -65,7 +65,7 @@ md-card {
     display: flex;
     flex: 0 0 auto;
     width: 100%;
-    height: 100% !important;
+    height: auto;
   }
 
   md-card-title {
